--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
       "bootstrap": "^3.3.7",
       "core-js": "^2.4.1",
       "rxjs": "^5.1.0",
-      "zone.js": "^0.8.4"
+      "zone.js": "^0.8.4",
+      "@angular/compiler-cli": "^4.0.0"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
