--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4",
-    "typescript": "~2.2.0",
+    "typescript": "~2.2.0"
   },
   "devDependencies": {
     "@angular/cli": "1.1.3",
