--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --target=production -e ${NODE_ENV:-production} --aot",
+    "postinstall": "ng build --target=prod -e ${NODE_ENV:-prod} --aot",
     "deploy": "git push origin master && git push heroku master"
   },
   "private": true,
