--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.1.3",
-    "@angular/compiler-cli": "^4.0.0",
     "@angular/animations": "^4.0.0",
+    "@angular/cli": "1.1.3",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
@@ -28,9 +28,10 @@
     "@angular/router": "^4.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ng2-page-scroll": "^4.0.0-beta.11",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
-    "typescript": "~2.2.0"
+    "typescript": "~2.2.0",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.1.3",
