--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "ng2-page-scroll": "^4.0.0-beta.12",
-    "zone.js": "^0.8.18"
+    "zone.js": "^0.8.18",
+    "typescript": "^2.6.1"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^5.0.0",
